changing session map